--- a/.config/i3/config
+++ b/.config/i3/config
@@ -102,6 +102,9 @@ exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle"
 # disable trackpad on startup
 exec --no-startup-id "xinput set-prop 12 164 0"
 
+# enable natural scroll for MX Master 2S
+exec --no-startup-is "xinput set-prop 9 302 1"
+
 #: }}}
 
 #: Container / Windows control {{{
