Enable smart edge border

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -116,7 +116,7 @@ for_window [class="^.*"] border pixel $border_size, \
 new_window  normal
 new_float   normal
 
-hide_edge_borders both
+hide_edge_borders smart
 
 # window colors
 # client    border    background \
