--- a/.config/i3/config
+++ b/.config/i3/config
@@ -84,10 +84,10 @@ font pango:Noto Sans 9
 
 # lockscreen
 # set desktop background with custom effect
-exec --no-startup-id "betterlockscreen -w dim"
-bindsym $mod+shift+x exec --no-startup-id "betterlockscreen -l dim"
-# exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle && betterlockscreen -w dim"
-# bindsym $mod+shift+x exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle && betterlockscreen -l dim"
+# exec --no-startup-id "betterlockscreen -w dim"
+# bindsym $mod+shift+x exec --no-startup-id "betterlockscreen -l dim"
+exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle && betterlockscreen -w dim"
+bindsym $mod+shift+x exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle && betterlockscreen -l dim"
 
 # set last used background
 # exec --no-startup-id "source ~/.fehbg"
