--- a/.config/i3/config
+++ b/.config/i3/config
@@ -103,7 +103,7 @@ exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle"
 exec --no-startup-id "xinput set-prop 12 164 0"
 
 # enable natural scroll for MX Master 2S
-exec --no-startup-is "xinput set-prop 9 302 1"
+exec --no-startup-id "xinput set-prop 9 302 1"
 
 #: }}}
 
