--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -40,16 +40,16 @@ compositing-border = over
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 
 [colors]
-background = #000000
-background-alt = #1c1b19
-foreground = #f7f8f7
+background = #100d23
+background-alt = #1e1d45
+foreground = #00ff9c
 foreground-alt = #918175
-primary = #cdfd00
-secondary = #2c78bf
-alert = #ff5300
-state_good = #519f50
-state_degraded = #fbb829
-state_bad = #ef2f27
+primary = #9dff00
+secondary = #00c3ff
+alert = #ff0049
+state_good = #009550
+state_degraded = #fcec02
+state_bad = #ff004c
 
 ;: }}}
 
@@ -89,15 +89,14 @@ padding = 0
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
 module-margin-left = 1
+module-margin-right = 1
 
 ; font-N = <fontconfig pattern>;<vertical offset>
-font-0 = "JetBrains Mono:style=Bold:pixelsize=9;2"
-font-1 = "JetBrains Mono Nerd Font:style=Regular:pixelsize=8;1"
-font-2 = "Noto Sans:style=Regular:pixelsize=8;1"
+font-0 = "Cozette:style=Regular:pixelsize=8;1"
 
 modules-left = i3 xwindow
 modules-center = 
-modules-right = filesystem cpu memory temperature wlan eth pulseaudio backlight battery xkeyboard date
+modules-right = filesystem cpu memory temperature pulseaudio backlight wlan eth battery xkeyboard date
 
 ; separator = |
 
@@ -119,6 +118,37 @@ tray-scale = 1.0
 cursor-click = 
 cursor-scroll = 
 
+[bar/altbar-i3]
+monitor = DP1
+fixed-center = false
+width = 100%
+height = 20
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+radius = 0.0
+
+line-size = 2
+line-color = #000000
+
+border-size = 0
+border-color = ${colors.primary}
+
+padding = 0
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = "Cozette:style=Regular:pixelsize=8;1"
+
+modules-left = i3 xwindow
+modules-center = 
+modules-right = 
+
+cursor-click = 
+cursor-scroll = 
+
 ;: }}}
 
 ;: Modules {{{
@@ -134,7 +164,7 @@ label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted =  muted
-label-muted-foreground = ${colors.foreground}
+label-muted-foreground = ${colors.background}
 label-muted-background = ${colors.alert}
 label-muted-padding = 1
 
@@ -148,11 +178,11 @@ bar-volume-foreground-5 = ${colors.state_degraded}
 bar-volume-foreground-6 = ${colors.state_bad}
 bar-volume-gradient = false
 bar-volume-indicator = |
-bar-volume-indicator-font = 2
+bar-volume-indicator-font = 1
 bar-volume-fill = ─
-bar-volume-fill-font = 2
+bar-volume-fill-font = 1
 bar-volume-empty = ─
-bar-volume-empty-font = 2
+bar-volume-empty-font = 1
 bar-volume-empty-foreground = ${colors.background-alt}
 
 [module/backlight]
@@ -266,8 +296,8 @@ time-alt = %H:%M
 
 format = <label>
 
-format-prefix = " "
-format-prefix-font = 2
+format-prefix = " "
+format-prefix-font = 0
 
 label = %date% %time%
 
@@ -295,16 +325,19 @@ interval = 30
 
 mount-0 = /home
 
-format-mounted = <label-mounted>
-format-mounted-underline = ${colors.secondary}
+format-mounted =  <label-mounted> /
+format-mounted-underline = ${colors.primary}
 
-format-unmounted = <label-unmounted>
+format-unmounted =  <label-unmounted> /
 format-unmounted-underline = ${colors.foreground-alt}
 
 ; label-mounted = %{F#2c78bf}%mountpoint%%{F-}: %free%
-label-mounted = %mountpoint% %free%
+; label-mounted = %mountpoint% %free%
+label-mounted = %free%
+label-mounted-foreground = ${colors.foreground}
 
-label-unmounted = %mountpoint%
+; label-unmounted = %mountpoint%
+label-unmounted = %free%
 label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/i3]
@@ -350,16 +383,16 @@ label-urgent-padding = 2
 type = internal/memory
 interval = 3
 
-format = <bar-used> <label>
+format = <label>
 
-label = %percentage_used%%
+label =  %percentage_used%%
 
-bar-used-indicator =
-bar-used-width = 10
-bar-used-foreground-0 = ${colors.primary}
-bar-used-fill = 
-bar-used-empty = 
-bar-used-empty-foreground = ${colors.background-alt}
+; bar-used-indicator =
+; bar-used-width = 10
+; bar-used-foreground-0 = ${colors.primary}
+; bar-used-fill = 
+; bar-used-empty = 
+; bar-used-empty-foreground = ${colors.background-alt}
 
 [module/mpd]
 ;https://github.com/polybar/polybar/wiki/Module:-mpd
@@ -416,7 +449,7 @@ label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted =  muted
-label-muted-foreground = ${colors.foreground}
+label-muted-foreground = ${colors.background}
 label-muted-background = ${colors.alert}
 label-muted-padding = 1
 
@@ -430,11 +463,11 @@ bar-volume-foreground-5 = ${colors.state_degraded}
 bar-volume-foreground-6 = ${colors.state_bad}
 bar-volume-gradient = false
 bar-volume-indicator = |
-bar-volume-indicator-font = 2
+bar-volume-indicator-font = 0
 bar-volume-fill = ─
-bar-volume-fill-font = 2
+bar-volume-fill-font = 0
 bar-volume-empty = ─
-bar-volume-empty-font = 2
+bar-volume-empty-font = 0
 bar-volume-empty-foreground = ${colors.background-alt}
 
 [module/temperature]
@@ -446,7 +479,6 @@ warn-temperature = 70
 format = <ramp> <label>
 format-warn = <label-warn>
 
-format-underline = ${colors.state_degraded}
 format-warn-underline = ${colors.state_bad}
 
 label = %temperature-c%
@@ -465,7 +497,7 @@ interface = wlp3s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = ${colors.secondary}
+format-connected-underline = ${colors.primary}
 
 label-connected =  %essid%
 
@@ -483,7 +515,7 @@ ramp-signal-4 = ▅
 ramp-signal-5 = ▆
 ramp-signal-6 = ▇
 ramp-signal-7 = █
-ramp-signal-foreground = ${colors.secondary}
+ramp-signal-foreground = ${colors.primary}
 
 [module/xbacklight]
 ;https://github.com/polybar/polybar/wiki/Module:-backlight
@@ -491,17 +523,17 @@ type = internal/xbacklight
 
 format = <label> <bar>
 
-label =  %percentage%
+label =  %percentage%
 
 bar-width = 6
 bar-indicator = |
 bar-indicator-foreground = ${colors.foreground-alt}
-bar-indicator-font = 2
+bar-indicator-font = 0
 bar-fill = ─
-bar-fill-font = 2
+bar-fill-font = 0
 bar-fill-foreground = ${colors.primary}
 bar-empty = ─
-bar-empty-font = 2
+bar-empty-font = 0
 bar-empty-foreground = ${colors.background-alt}
 
 [module/xkeyboard]
@@ -516,7 +548,7 @@ label-layout-padding = 1
 label-layout-background = ${colors.background-alt}
 
 label-indicator-padding = 1
-label-indicator-foreground = ${colors.foreground}
+label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.alert}
 
 [module/xwindow]
