--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -127,8 +127,8 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: "#100d23"
-    foreground: "#00ff9c"
+    background: "#000000"
+    foreground: "#ffffff"
 
     # Bright and dim foreground colors
     #
@@ -145,8 +145,8 @@ colors:
   # Allowed values are CellForeground and CellBackground, which reference the
   # affected cell, or hexadecimal colors like #ff00ff.
   cursor:
-    text: "#100d23"
-    cursor: "#9dff00"
+    text: "#000000"
+    cursor: "#40e0d0"
 
   # Vi mode cursor colors
   #
@@ -165,8 +165,8 @@ colors:
   # Allowed values are CellForeground and CellBackground, which reference the
   # affected cell, or hexadecimal colors like #ff00ff.
   selection:
-    text: "#9dff00"
-    background: "#311b92"
+    text: "#000000"
+    background: "#ffffff"
 
   # Search colors
   #
@@ -184,25 +184,25 @@ colors:
 
   # Normal colors
   normal:
-    black: "#100d23"
-    red: "#ff004c"
+    black: "#000000"
+    red: "#d70061"
     green: "#009550"
-    yellow: "#fcec02"
-    blue: "#3d5afe"
-    magenta: "#b700ff"
+    yellow: "#ff9d00"
+    blue: "#445291"
+    magenta: "#5f2a5f"
     cyan: "#00c3ff"
     white: "#ffffff"
 
   # Bright colors
   bright:
-    black: "#372963"
-    red: "#a22929"
+    black: "#2e373e"
+    red: "#ff005f"
     green: "#3c9f4a"
     yellow: "#ffff00"
-    blue: "#8b96ff"
-    magenta: "#c566fc"
-    cyan: "#b4baff"
-    white: "#f7f7f7"
+    blue: "#306b8f"
+    magenta: "#c526ff"
+    cyan: "#40e0d0"
+    white: "#ffffcd"
 
   # Dim colors
   #
