Update font setting

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -103,7 +103,7 @@ font:
     style: Bold
   italic:
     family: JetBrainsMono Nerd Font
-    style: Italic
+    style: Regular
   bold_italic:
     family: JetBrainsMono Nerd Font
     style: Bold Italic
