--- a/.config/i3/config
+++ b/.config/i3/config
@@ -77,6 +77,21 @@ set $border_size 2
 
 #: }}}
 
+#: Initialize workspace {{{
+
+workspace $ws1 output $mon1
+workspace $ws2 output $mon2
+workspace $ws3 output $mon3
+workspace $ws4 output $mon4
+workspace $ws5 output $mon5
+workspace $ws6 output $mon6
+workspace $ws7 output $mon7
+workspace $ws8 output $mon8
+workspace $ws9 output $mon9
+workspace $ws10 output $mon10
+
+#: }}}
+
 #: Output configuration {{{
 
 # font
