--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         JetBrains Mono
+font_family         JetBrainsMono Nerd Font
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
