--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -123,110 +123,84 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors
-colors:
-  # Default colors
-  primary:
-    background: "#000000"
-    foreground: "#ffffff"
+schemes:
+  gruvbox_light: &light
+    # Default colors
+    primary:
+      # hard contrast: background = '#f9f5d7'
+      background: "#fbf1c7"
+      # hard contrast: background = '#f2e5bc'
+      foreground: "#3c3836"
 
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '#9a9a9a'
-    #bright_foreground: '#ffffff'
+    cursor:
+      text: CellBackground
+      cursor: CellForeground
 
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  cursor:
-    text: CellBackground
-    cursor: CellForeground
+    selection:
+      text: CellBackground
+      background: CellForeground
 
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
+    # Normal colors
+    normal:
+      black:    "#fbf1c7"
+      red:      "#cc241d"
+      green:    "#98971a"
+      yellow:   "#d79921"
+      blue:     "#458588"
+      magenta:  "#b16286"
+      cyan:     "#689d6a"
+      white:    "#7c6f64"
 
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground and CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  selection:
-    text: CellBackground
-    background: CellForeground
+    # Bright colors
+    bright:
+      black:    "#928374"
+      red:      "#9d0006"
+      green:    "#79740e"
+      yellow:   "#b57614"
+      blue:     "#076678"
+      magenta:  "#8f3f71"
+      cyan:     "#427b58"
+      white:    "#3c3836"
 
-  # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground and CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
+  gruvbox_dark: &dark
+    # Default colors
+    primary:
+      # hard contrast: background = '#1d2021'
+      background: "#282828"
+      # hard contrast: background = '#32302f'
+      foreground: "#ebdbb2"
 
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
+    cursor:
+      text: CellBackground
+      cursor: CellForeground
 
-  # Normal colors
-  normal:
-    black: "#000000"
-    red: "#d70061"
-    green: "#009550"
-    yellow: "#ff9d00"
-    blue: "#445291"
-    magenta: "#5f2a5f"
-    cyan: "#00c3ff"
-    white: "#ffffff"
+    selection:
+      text: CellBackground
+      background: CellForeground
 
-  # Bright colors
-  bright:
-    black: "#2e373e"
-    red: "#ff005f"
-    green: "#3c9f4a"
-    yellow: "#ffff00"
-    blue: "#306b8f"
-    magenta: "#c526ff"
-    cyan: "#40e0d0"
-    white: "#ffffcd"
+    # Normal colors
+    normal:
+      black:    "#282828"
+      red:      "#cc241d"
+      green:    "#98971a"
+      yellow:   "#d79921"
+      blue:     "#458588"
+      magenta:  "#b16286"
+      cyan:     "#689d6a"
+      white:    "#a89984"
 
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#000000'
-  #  red:     '#8c3336'
-  #  green:   '#7a8530'
-  #  yellow:  '#97822e'
-  #  blue:    '#506d8f'
-  #  magenta: '#80638e'
-  #  cyan:    '#497e7a'
-  #  white:   '#9a9a9a'
+    # Bright colors
+    bright:
+      black:    "#928374"
+      red:      "#fb4934"
+      green:    "#b8bb26"
+      yellow:   "#fabd2f"
+      blue:     "#83a598"
+      magenta:  "#d3869b"
+      cyan:     "#8ec07c"
+      white:    "#ebdbb2"
 
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
+colors: *light
 
 # Bell
 #
