--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -93,6 +93,10 @@ shadow-exclude = [
     "class_g ?= 'Cairo-dock'",
     "class_g ?= 'Xfce4-notifyd'",
     "class_g ?= 'Xfce4-power-manager'",
+    "class_g ?= 'Dmenu'",
+    # "class_g ?= 'Dunst'",
+    # disables shadows on i3 frames
+    "class_g ?= 'i3-frame'",
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
@@ -130,7 +134,7 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = false;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 2;
+fade-delta = 1;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
@@ -178,10 +182,10 @@ dbe = false;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
-unredir-if-possible = false;
+unredir-if-possible = true;
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
+focus-exclude = [ "class_g = 'Cairo-dock'" ];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
@@ -195,17 +199,24 @@ detect-client-leader = true;
 
 wintypes:
 {
-    tooltip =
+    tooltip :
     {
-        # fade: Fade the particular type of windows.
-        fade = true;
-        # shadow: Give those windows shadow
-        shadow = false;
-        # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
-        # focus: Whether to always consider windows of this type focused.
-        focus = true;
+      # fade: Fade the particular type of windows.
+      fade = true;
+      # shadow: Give those windows shadow
+      shadow = false;
+      # opacity: Default opacity for the type of windows.
+      opacity = 0.85;
+      # focus: Whether to always consider windows of this type focused.
+      focus = true;
     };
+    fullscreen :
+    {
+      fade = true;
+      shadow = false;
+      opacity = 1;
+      focus = true;
+    }
 };
 
 # }}}
