--- a/.config/i3/config
+++ b/.config/i3/config
@@ -372,6 +372,10 @@ bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ; exec -
 
 bindsym Print exec --no-startup-id "flameshot gui -p $HOME/Pictures"
 
+# Splatmoji
+
+bindsym $Mod+slash exec "splatmoji copy"
+
 #: }}}
 
 #: }}}
