--- a/.config/i3/config
+++ b/.config/i3/config
@@ -123,7 +123,7 @@ bindsym $mod+shift+x exec --no-startup-id ~/bin/lockscreen
 #: Input configuration {{{
 
 # keyboard layouts
-exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle"
+exec --no-startup-id "setxkbmap -layout gb,us,th -option grp:win_space_toggle"
 
 # disable trackpad on startup
 exec --no-startup-id "xinput set-prop 12 164 0"
