--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -380,16 +380,16 @@ tab_bar_background none
 
 #: Color Scheme {{{
 
-cursor #fbb829
+cursor #cccccc
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-cursor_text_color #1c1b19
+cursor_text_color #111111
 
-foreground #fce8c3
-background #1c1b19
+foreground #dddddd
+background #000000
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -446,47 +446,47 @@ dim_opacity 0.75
 #: The foreground for text selected with the mouse. A value of none
 #: means to leave the color unchanged.
 
-selection_foreground #1c1b19
+selection_foreground #000000
 
 #: The background for text selected with mouse.
 
-selection_background #fce8c3
+selection_background #fffacd
 
 #: The 16 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
 #: black
-color0  #1c1b19
-color8  #918175
+color0  #000000
+color8  #767676
 
 #: red
-color1  #ef2f27
-color9  #f75341
+color1  #cc0403
+color9  #f2201f
 
 #: green
-color2  #519f50
-color10 #98bc37
+color2  #19cb00
+color10 #23fd00
 
 #: yellow
-color3  #fbb829
-color11 #fed06e
+color3  #cecb00
+color11 #fffd00
 
 #: blue
-color4  #2c78bf
-color12 #68a8e4
+color4  #0d73cc
+color12 #1a8fff
 
 #: magenta
-color5  #e02c6d
-color13 #ff5c8f
+color5  #cb1ed1
+color13 #fd28ff
 
 #: cyan
-color6  #0aaeb3
-color14 #53fde9
+color6  #0dcdcd
+color14 #14ffff
 
 #: white
-color7  #d0bfa1
-color15 #fce8c3
+color7  #dddddd
+color15 #ffffff
 
 #: Color for marks of type 1
 
@@ -494,7 +494,7 @@ mark1_foreground black
 
 #: Color for marks of type 1 (light steel blue)
 
-mark1_background #68a8e4
+mark1_background #98d3cb
 
 #: Color for marks of type 2
 
@@ -502,7 +502,7 @@ mark2_foreground black
 
 #: Color for marks of type 1 (beige)
 
-mark2_background #fce8c3
+mark2_background #f2dcd3
 
 #: Color for marks of type 3
 
@@ -510,7 +510,7 @@ mark3_foreground black
 
 #: Color for marks of type 1 (violet)
 
-mark3_background #ff5c8f
+mark3_background #f274bc
 
 #: }}}
 
