--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -132,12 +132,44 @@ font:
 draw_bold_text_with_bright_colors: true
 
 schemes:
-  panda_syntax: &panda
-    # Default colors
+  panda_syntax: &srcery
     primary:
-      # hard contrast: background = '#f9f5d7'
+      background: "#1c1b19"
+      foreground: "#d0bfa1"
+
+    cursor:
+      text: CellBackground
+      cursor: CellForeground
+
+    selection:
+      text: CellBackground
+      background: CellForeground
+
+    # Normal colors
+    normal:
+      black:    "#1c1b19"
+      red:      "#ef2f27"
+      green:    "#519f50"
+      yellow:   "#fbb829"
+      blue:     "#2c78bf"
+      magenta:  "#e02c6d"
+      cyan:     "#0aaeb3"
+      white:    "#d0bfa1"
+
+    # Bright colors
+    bright:
+      black:    "#918175"
+      red:      "#f75341"
+      green:    "#98bc37"
+      yellow:   "#fed06e"
+      blue:     "#68bc37"
+      magenta:  "#ff5c8f"
+      cyan:     "#53fde9"
+      white:    "#fce8c3"
+
+  panda_syntax: &panda
+    primary:
       background: "#25282a"
-      # hard contrast: background = '#f2e5bc'
       foreground: "#f3f3f3"
 
     cursor:
@@ -171,7 +203,6 @@ schemes:
       white:    "#f3f3f3"
 
   gruvbox_dark: &gruvbox
-    # Default colors
     primary:
       # hard contrast: background = '#1d2021'
       background: "#282828"
@@ -208,7 +239,7 @@ schemes:
       cyan:     "#8ec07c"
       white:    "#ebdbb2"
 
-colors: *panda
+colors: *srcery
 
 # Bell
 #
