Disable mpv windows transparency/opacity

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -125,7 +125,7 @@ inactive-opacity-override = false;
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ "class_g = 'Cairo-dock'" ];
+focus-exclude = [ "class_g = 'Cairo-dock'", "class_g = 'mpv'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
