--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -98,16 +98,16 @@ font:
   normal:
     family: JetBrainsMono Nerd Font
     style: Regular
-  bold:
-    family: JetBrainsMono Nerd Font
-    style: Bold
-  italic:
-    family: JetBrainsMono Nerd Font
-    style: Regular
-  bold_italic:
-    family: JetBrainsMono Nerd Font
-    style: Bold Italic
-  size: 16.0
+  # bold:
+  #   family: monospace
+  #   style: Bold
+  # italic:
+  #   family: monospace
+  #   style: Regular
+  # bold_italic:
+  #   family: monospace
+  #   style: Bold Italic
+  size: 9
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
