--- a/.config/i3/config
+++ b/.config/i3/config
@@ -77,6 +77,9 @@ set $border_size 1
 
 #: Initialize workspace {{{
 
+# workspace_layout default|stacking|tabbed
+workspace_layout default
+
 workspace $ws1 output $mon1
 workspace $ws2 output $mon1
 workspace $ws3 output $mon1
