--- a/.config/i3/config
+++ b/.config/i3/config
@@ -178,7 +178,9 @@ bindsym $mod+Return     exec --no-startup-id $term
 bindsym $mod+Shift+q kill
 
 # launcher
-bindsym $mod+d exec --no-startup-id rofi_run -r
+# bindsym $mod+d exec --no-startup-id rofi_run -r
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+Shift+D exec --no-startup-id dmenu_run
 
 # restart inplace (preserves your layout/session, can be used to upgrade wm)
 bindsym $mod+Shift+r restart
