--- a/.config/i3/config
+++ b/.config/i3/config
@@ -276,23 +276,23 @@ bindsym $mod+v split v
 default_orientation horizontal
 
 # switch between layouts
-# bindsym $mod+Shift+t layout tabbed
-# bindsym $mod+Shift+s layout stacking
-bindsym $mod+Mod1+b layout toggle split
+bindsym $mod+Shift+s layout stacking
+bindsym $mod+Shift+w layout tabbed
+bindsym $mod+Shift+t layout toggle split
 
 # make the current focus fullscreen
 bindsym $mod+f fullscreen toggle
 
 # toggle the current focus between tiling / floating
-bindsym Mod1+Shift+space floating toggle
-floating_modifier Mod1
+bindsym $mod+Shift+space floating toggle
+floating_modifier $mod
 
 # move focus between tiling / floating windows
-bindsym Mod1+space focus mode_toggle
+bindsym $mod+space focus mode_toggle
 
 # move focus between parent / child windows
-bindsym $mod+p focus parent
-bindsym $mod+c focus child
+bindsym $mod+a focus parent
+# bindsym $mod+c focus child
 
 #: }}}
 
