Add yad floating

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -428,6 +428,8 @@ for_window [title="(?i)(?:copying|deleting|moving)"] \
   floating enable
 for_window [window_role="(?i)(?:about|pop-up|setup)"] \
   floating enable
+for_window [class="Yad" instance="yad"] \
+  floating enable
 
 # Android Studio
 for_window [title="win0"] \
