--- a/.config/i3/config
+++ b/.config/i3/config
@@ -180,7 +180,7 @@ bindsym $mod+Shift+q kill
 # launcher
 # bindsym $mod+d exec --no-startup-id rofi_run -r
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+Shift+D exec --no-startup-id dmenu_run
+bindsym $mod+Shift+d exec --no-startup-id dmenu_run
 
 # restart inplace (preserves your layout/session, can be used to upgrade wm)
 bindsym $mod+Shift+r restart
