--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -92,7 +92,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 ; font-N = <fontconfig pattern>;<vertical offset>
-font-0 = "Cozette:style=Regular:pixelsize=8;1"
+font-0 = "Cozette:style=Regular:antialias=false:pixelsize=8;1"
 
 modules-left = i3 xwindow
 modules-center =
@@ -140,7 +140,7 @@ padding = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Cozette:style=Regular:pixelsize=8;1"
+font-0 = "Cozette:style=Regular:antialias=false:pixelsize=8;1"
 
 modules-left = i3 xwindow
 modules-center =
