--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -33,15 +33,8 @@ shadow-offset-y = -12;
 # shadow-green = 0.0;
 # shadow-blue = 0.0;
 
-# Do not paint shadows on shaped windows. Note shaped windows
-# here means windows setting its shape through X Shape extension.
-# Those using ARGB background is beyond our control.
-# Deprecated, use
-#   shadow-exclude = 'bounding_shaped'
-# or
-#   shadow-exclude = 'bounding_shaped && !rounded_corners'
-# instead.
-# shadow-ignore-shaped = ''
+# Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
+# shadow-color = "#000000"
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -61,6 +54,7 @@ shadow-exclude = [
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "class_g = 'Firefox' && argb",
+    "class_g = 'Cairo-clock'",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
@@ -75,6 +69,16 @@ shadow-exclude = [
     "_GTK_FRAME_EXTENTS@:c",
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
+
+# Specify a X geometry that describes the region in which shadow should not
+# be painted in, such as a dock window region. Use
+#    shadow-exclude-reg = "x10+0+0"
+# for example, if the 10 pixels on the bottom of the screen should not have shadows painted on.
+#
+# shadow-exclude-reg = ""
+
+# Crop shadow of a window fully on a particular Xinerama screen to the screen.
+# xinerama-shadow-crop = false
 
 # }}}
 
@@ -112,9 +116,6 @@ inactive-opacity = 0.8;
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.7;
 
-# Default opacity for dropdown menus and popup menus. (0.0 - 1.0, default 1.0)
-# menu-opacity = 1.0
-
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 inactive-opacity-override = false;
 
@@ -125,7 +126,11 @@ inactive-opacity-override = false;
 # inactive-dim = 0.0
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ "class_g = 'Cairo-dock'", "class_g = 'mpv'" ];
+focus-exclude = [
+    "class_g = 'Cairo-clock'",
+    "class_g = 'Cairo-dock'",
+    "class_g = 'mpv'"
+];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -140,12 +145,28 @@ focus-exclude = [ "class_g = 'Cairo-dock'", "class_g = 'mpv'" ];
 
 # }}}
 
+# Corners {{{
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 0
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
+
+# }}}
+
 # Background-Blurring {{{
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method =
 # blur-size = 12
 # blur-deviation = false
+# blur-strength = 5
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -182,9 +203,9 @@ blur-background-exclude = [
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
-backend = "xrender";
+backend = "glx";
 
-# Vertical synchronization: match the refresh rate of the monitor
+# Enable/disable VSync
 vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -210,13 +231,6 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 refresh-rate = 0;
 
-# Limit picom to repaint at most once every 1 / 'refresh_rate' second to
-# boost performance. This should not be used with
-#   vsync drm/opengl/opengl-oml
-# as they essentially does sw-opti's job already,
-# unless you wish to specify a lower refresh rate than the actual value.
-# sw-opti = true;
-
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
 # provided that the WM supports it.
@@ -237,8 +251,9 @@ refresh-rate = 0;
 # in the same group focused at the same time.
 detect-transient = true;
 
-# Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
-# WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
+# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
+# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if
+# detect-transient is enabled, too.
 detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels.
@@ -284,7 +299,7 @@ use-damage = true
 # GLX backend: Use specified GLSL fragment shader for rendering window contents.
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl`
 # in the source tree for examples.
-# glx-fshader-win = ''
+# glx-fshader-win = ""
 
 # Force all windows to be painted with blending. Useful if you
 # have a glx-fshader-win that could turn opaque pixels transparent.
