--- a/.config/i3/config
+++ b/.config/i3/config
@@ -302,11 +302,11 @@ bindsym $mod+Shift+t layout toggle split
 bindsym $mod+f fullscreen toggle
 
 # toggle the current focus between tiling / floating
-bindsym $mod+Shift+space floating toggle
-floating_modifier $mod
+bindsym Mod1+Shift+space floating toggle
+floating_modifier Mod1
 
 # move focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym Mod1+space focus mode_toggle
 
 # move focus between parent / child windows
 bindsym $mod+a focus parent
