Enable child focus keybind

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -310,7 +310,7 @@ bindsym Mod1+space focus mode_toggle
 
 # move focus between parent / child windows
 bindsym $mod+a focus parent
-# bindsym $mod+c focus child
+bindsym $mod+c focus child
 
 #: }}}
 
