Implement fallback values

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -151,6 +151,16 @@ cursor-scroll =
 
 ;: Modules {{{
 
+;: Define fallback values used by all module formats
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+format-underline =
+format-overline =
+format-spacing =
+format-padding =
+format-margin =
+format-offset =
+
 [module/alsa]
 ;https://github.com/polybar/polybar/wiki/Module:-alsa
 type = internal/alsa
